movie-carousel setup

--- a/index.html
+++ b/index.html
@@ -40,12 +40,28 @@
                     MORE INFO</button>
             </div>
         </div>
-
     </div>
+    <div class="movie-carousel" >
+        <div class="owl-carousel owl-theme">
+            <div class="item"><img class="movie-box" src="/img/mini1.jpg"></div>
+            <div class="item"><img class="movie-box" src="/img/mini2.jpg"></div>
+            <div class="item"><img class="movie-box" src="/img/mini3.jpg"></div>
+            <div class="item"><img class="movie-box" src="/img/mini4.jpg"></div>
+            <div class="item"><img class="movie-box" src="/img/mini5.jpg"></div>
+            <div class="item"><img class="movie-box" src="/img/mini6.jpg"></div>
+            <div class="item"><img class="movie-box" src="/img/mini7.jpg"></div>
+            <div class="item"><img class="movie-box" src="/img/mini8.jpg"></div>
+            <div class="item"><img class="movie-box" src="/img/mini9.jpg"></div>
+            <div class="item"><img class="movie-box" src="/img/mini10.jpg"></div>
+
+        </div>
+    </div>
+
 
     <script src="https://kit.fontawesome.com/4941065433.js" crossorigin="anonymous"></script>
     <script src="/owl/js/jquery.min.js"></script>
     <script src="/owl/js/owl.carousel.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
 
